# pydacharts

./: pyproject.toml
serve/: app.py
serve/templates/: index.html
